@@ -7,10 +7,10 @@
  *)
 
 signature WINDOWS_DDE = sig
-(*    type info
+    type info
     val startDialog : string * string -> info
     val executeString : info * string * int * Time.time
                           -> unit
-    val stopDialog : info -> unit *)
+    val stopDialog : info -> unit
   end
 
