@@ -15,6 +15,12 @@ Description:
 
 ----------------------------------------------------------------------
 Name: Lars Bergstrom (larsberg@cs.uchicago.edu)
+Date: 2008/02/14
+Description:
+
+Added the Windows DDE structure
+----------------------------------------------------------------------
+Name: Lars Bergstrom (larsberg@cs.uchicago.edu)
 Date: 2008/02/05
 Description:
 
